--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Index Page</title>
 </head>
 <body>
+
+    <h1>
+        This Is Index
+    </h1>
+
+    <a href="new_note">
+        <h3>Add New Note</h3>
+    </a>
+    
+    
+
+{#    {% for tuple in table %}#}
+{#        #}
+{#    {% endfor %}#}
 
 </body>
 </html>
