changed to uploading files

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,10 @@
     <a href="new_note">
         <h3>Add New Note</h3>
     </a>
-    
+
+    <a href="read_note">
+        <h3>Add New Note</h3>
+    </a>
     
 
 {#    {% for tuple in table %}#}
