--- a/templates/add_note.html
+++ b/templates/add_note.html
@@ -11,7 +11,10 @@
 <form action="">
     <label for="note_name">Note Name:</label>
    <input type="text" name="note_name" id="note_name">
-    
+
+    <input type="file">
+
+    <input type="submit" name="Upload" id="Upload">
 </form>
 
 </body>
